# securegrade

./: .gitignore  Cargo.toml  clear_containers.sh  t.sql
assignments/1/: assignment.toml  test1.in
assignments/2/: assignment.toml
assignments/3/: assignment.toml
assignments/5/: assignment.toml
dockerfiles/python/: Dockerfile
dockerfiles/python313/: Dockerfile
dockerfiles/rust/: Dockerfile
src/: assignment.rs  container.rs  database.rs  docker.rs  endpoints.rs  image.rs  main.rs  model.rs  response_object.rs  security.rs  submission_object.rs
src/assignment/: preferences.rs  test.rs
src/container/: image.rs
src/database/: assignment.rs  auth.rs  operations.rs  user.rs
src/database/assignment/: operations.rs
src/database/auth/: session.rs  validate.rs
src/endpoints/: admin.rs  instructor.rs  student.rs
src/model/: add_to_class_object.rs  assignment_grade.rs  assignment_item.rs  class_info.rs  class_item.rs  error_object.rs  file_object.rs  login_object.rs  new_class_object.rs  new_user_object.rs  request.rs  response_object.rs  simple_response.rs  submission_object.rs  submission_response.rs  supplementary_material.rs  user_info.rs  validation_object.rs
src/model/submission_object/: file_object.rs
src/submission_object/: file_object.rs
