[package]
name = "grader"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
