[package]
name = "grader"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
axum-server = { version = "0.7.2", features = ["tls-rustls-no-provider"] }
base64 = "0.22.1"
chrono = "0.4.42"
rand = "0.9.2"
rustls = "0.23.33"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
